--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "test",
+  "sideEffects": false,
   "version": "1.0.0",
   "description": "this is test",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -14,13 +15,27 @@
   "author": "wfb",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer": "^9.0.1",
+    "babel-loader": "^7.1.5",
     "clean-webpack-plugin": "^0.1.19",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
+    "file-loader": "^1.1.11",
+    "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
+    "node-sass": "^4.9.2",
+    "postcss-loader": "^2.1.6",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
+    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.16.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
+  },
+  "dependencies": {
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.10"
   }
 }
